форматирование less файлов

--- a/app/styles/less/_config.less
+++ b/app/styles/less/_config.less
@@ -1,6 +1,6 @@
 // USER VARIABLES SECTION
 @main_color: #ffffff;
-@accent: #FFB548; // Accent Color
+@accent: #ffb548; // Accent Color
 @fontsize: 16px; // size body
 
 // IMPORT SECTION
@@ -21,4 +21,3 @@
 .font("Open-Sans", normal, 400, "../fonts/open-sans-v29-latin-regular.woff2");
 .font("Open-Sans", normal, 700, "../fonts/open-sans-v29-latin-700");
 .font("Bebas-Neue", normal, 700, "../fonts/BebasNeue-Regular.woff2");
-
