--- a/app/styles/less/blocks/button.less
+++ b/app/styles/less/blocks/button.less
@@ -1,11 +1,11 @@
 .button {
-	.fontstyle ("Open-Sans" sans-serif, normal);
+	.fontstyle ("Open-Sans" sans-serif, normal);;
 	.fontsize(16px, 700, 22px);
 	width: 260px;
 	height: 60px;
 	padding: 18px 18px 21px 17px;
-	color: #1A1917;
-	background: linear-gradient(194.68deg, #FFB548 11.27%, #F3AF34 90.4%);
+	color: #1a1917;
+	background: linear-gradient(194.68deg, #ffb548 11.27%, #f3af34 90.4%);
 	border: none;
 	border-radius: 4px;
 }
@@ -17,7 +17,7 @@
 	margin-bottom: 364px;
 
 	&--border {
-		border-right: 0.873968px solid #1A1917; 
+		border-right: 0.873968px solid #1a1917;
 		transform: matrix(1, 0, 0.04, 1, 0, 0);
 		padding: 0 11px 0 0;
 	}
