--- a/app/styles/less/blocks/description.less
+++ b/app/styles/less/blocks/description.less
@@ -1,46 +1,42 @@
 .description {
-    .fontsize (18px, 400, 22px);
+	.fontsize (18px, 400, 22px);
 }
 
 .description span {
-    text-decoration: underline @accent;
+	text-decoration: underline @accent;
 }
 
 .description--align {
-    text-align: justify;
+	text-align: justify;
 }
 
 // about
 
 .description--about {
-    margin-left: 189px;
-    max-width: 365px;
-}   
+	margin-left: 189px;
+	max-width: 365px;
+}
 
 // feauters
 
 .description--feature {
-    color: @main_color;
-    .fontstyle ("Open-Sans" sans-serif, normal);
-    letter-spacing: normal;
-    
+	color: @main_color;
+	.fontstyle ("Open-Sans" sans-serif, normal);;
+	letter-spacing: normal;
 }
-
 
 // quotes
 
 .description--quotes {
-    max-width: 435px;
+	max-width: 435px;
 }
 
 .description--opacity {
-    opacity: 0.5;
+	opacity: 0.5;
 }
 
 // subscribe
 
 .description__subscribe {
-    max-width: 645px;
+	max-width: 645px;
 }
-
-
